--- a/README.asciidoc
+++ b/README.asciidoc
@@ -4,7 +4,7 @@ image:./logo.png[company logo]
 
 = ABコンバータちゃん(ABC) by  木下研究所
 ABコンバータちゃんは、会社や製品によって極性が異なることがある、3.5mm TRS MIDIケーブルの極性を変換する基板のキットです。
-極性が機器の接続をしたい時などにお使いください。
+極性が異なる機器同士の接続をしたい時などにお使いください。
 
 = キットの内容
 * 基板 1枚
