--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,26 +1,32 @@
 :last-update-label!:
+:doctype: article
+:nofooter:
 
-image:./logo.png[company logo]
+image::./logo.png[company logo]
 
-= ABコンバータちゃん(ABC) by  木下研究所
-ABコンバータちゃんは、会社や製品によって極性が異なることがある、3.5mm TRS MIDIケーブルの極性を変換する基板のキットです。
-極性が異なる機器同士の接続をしたい時などにお使いください。
+== AB Converter-chan (ABC) by  Kinoshita laboratory
+"AB Converter-chan kit" is a converter kit which can convert 3.5mm TRS MIDI signal type(from TRS MIDI A to B, and vice versa).
+Please use it when you want to connect devices with different signal types.
 
-= キットの内容
-* 基板 1枚
-* 3.5mmTRSジャック 2個
+== Kit contents:
+* 1x PCB
+* 2x 3.5mm TRS jack
 
-= キット以外に必要なもの
-* 3.5mmTRSケーブル 2本
+== What you will need:
+* 2x 3.5mm TRS cable
 
 
-= 組みたてかた
-図のように、3.5mmTRSジャックをJ1、J2にはんだづけします。
+== How to assemble:
+Solder the included TRS jacks to the place shown below(8 points).
 
-image:./top.png[width=400]
+image::./top.png[width=200]
 
-image:./bottom.png[width=400]
+image::./bottom.png[width=200]
 
-= 使い方
-方向はありません。一方から入れると、もう一方から変換された信号が出ます。
+== Usage:
+This converter has no polarity or direction.
+When you input MIDI signal from a side, you can get converted signal from the other side.
 
+
+== Schematics, design data, questions:
+https://github.com/kinoshita-lab/ABC
